admission/ValidatingAdmissionPolicy/policies/hostports/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostports-initcontainers
  annotations:
    kubeapt.io/uuid: "ac16a8ff-1089-4e1d-a470-89958cc479ae"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
